Fix percentile alignment

--- a/chrome_extension_print/styles/print.css
+++ b/chrome_extension_print/styles/print.css
@@ -36,5 +36,5 @@ td {
 }
 
 .percentile {
-    align-content: left;
+    text-align: left;
 }
