--- a/chrome_extension_print/styles/receipt.css
+++ b/chrome_extension_print/styles/receipt.css
@@ -42,5 +42,5 @@ th {
 }
 
 .percentile {
-    align-content: center;
+    text-align: center;
 }
